--- a/content/opt1.ipynb
+++ b/content/opt1.ipynb
@@ -111,6 +111,7 @@
     }
    ],
    "source": [
+    "%pip install -q ipywidgets",
     "import ipywidgets as widgets\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
